<resources>
    <string name="app_name">QRCode</string>
    <string name="loading_message">Loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_permission_needed">Camera permission required</string>
    <string name="camera_permission_alert_msg">If you don\'t have camera permission, you can\'t scan qrcode. Please allow us to access your device so that we can better serve you.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="about">About</string>
    <string name="create">Create</string>
    <string name="created">Created</string>
    <string name="create_failed">Create failed</string>
    <string name="updated">Updated</string>
    <string name="update_failed">Update failed</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="deleted">Deleted</string>
    <string name="delete_failed">Delete failed</string>
    <string name="title_gallery">Photo</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="photos_count">%d photos</string>
    <string name="scan_failed_message">Sorry, we could not detect a QR code or barcode in your image</string>
    <string name="not_found_browser_message">No application can handle this request. Please install a web browser</string>
    <string name="flash_switched_on">Flash Switched ON</string>
    <string name="flash_switched_off">Flash Switched Off</string>
    <string name="flash_not_available">Flash is not available in the device</string>
    <string name="no_history_message">Your Scan history will live here.\n What will your first Qr code be?</string>
    <string name="not_found_message">Not found?</string>
    <string name="text_sound">Sound</string>
    <string name="text_vibrate">Vibrate</string>
    <string name="text_save_history">Save History</string>
    <string name="text_remove_ads">Remove ads</string>
    <string name="error_message">An error occurred! Please try again later.</string>
    <string name="clear_history_title">Clear history</string>
    <string name="clear_history_message">Do you want to clear all histories?</string>
    <string name="about_title">About</string>
    <string name="about_message">Version: %s\nDevelop by Ace</string>
    <string name="permission_not_enough_message">At least one of the permissions was not granted, launching again…</string>
    <string name="admob_app_id">ca-app-pub-2470081383656893~8205045732</string>
    <string name="banner_ad_unit_id">ca-app-pub-2470081383656893/7408142849</string>
    <string name="full_sceen_ad_unit_id">ca-app-pub-2470081383656893/6610152217</string>
    <string name="enter_text">Enter text (*):</string>
    <string name="text_require">Text is required</string>
    <string name="counter_text">%d/255</string>
    <string name="default_counter_text">0/255</string>
    <string name="logo">Logo (Optional):</string>
    <string name="setting_language">Language:</string>
    <string name="text_english">English</string>
    <string name="text_vietnamese">Vietnamese</string>
</resources>