<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menuQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/padding_medium"
        android:focusable="true"
        android:paddingVertical="@dimen/padding_medium"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_big"
        android:text="@string/app_name"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_qr_code"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/menuHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/padding_medium"
        android:focusable="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/title_history"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_history"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/menuSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/padding_medium"
        android:focusable="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/title_setting"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_setting"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/menuAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/padding_medium"
        android:focusable="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/about"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_info"
        app:drawableTint="@color/black" />

</LinearLayout>